# LTS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.py  troubleshooter_agent.py
agent/: __init__.py  agent.py  backends.py  llm_client.py  prompts.py
autotask/: client.py
data/: _eval_state.json  autotask_data.ipynb  gen_synth.py  mock_autotask.json
evaluation/: analyze_feedback.py  check_tooling.py  quantitative.py
evaluation/dataset/: testcases.json
evaluation/qualitative/: feedback_form.md  sample_feedback.csv
evaluation/results/: qualitative_summary.md  results.csv  results.md
mcp_server/: server.py  toolkit.py
mcp_server/filters/: pii_filter.py
simulator/: log_generator.py
tests/: test_poc.py
ui/: app.py  shared.py  user_app.py
