[project]
name = "LTS"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "google-genai==2.2.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "mcp>=1.27.1",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "protobuf>=7.34.1",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
